# righton

./: .gitignore  Cargo.toml  README.md  example.ro  test_all  test_all.ll  test_all.ro  test_list  test_list.ll  test_list.ro  test_pow  test_pow.ll  test_pow.ro  test_stdlib  test_stdlib.ll  test_stdlib.ro  tmp_test_type.ro
.github/workflows/: ci.yml
documentation/: README.md  borrow-checker.md  examples.md  language-reference.md  vscode-extension.md
src/: ast.rs  borrow_checker.rs  compiler.rs  lexer.rs  lib.rs  llvm.rs  main.rs  parser.rs  type_checker.rs
src/lsp/: main.rs
stdlib/: std.ro
tests/: integration_tests.rs  unit_tests.rs
